--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/stryles2.css">
+    <link rel="stylesheet" href="/css/stryles2.css">
     <link rel="manifest" href="/manifest.json">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
@@ -50,7 +50,7 @@
         </div> -->
     </div>
 
-    <script type="module"    src="../app2.js"></script>
+    <script type="module"    src="/app2.js"></script>
 
     <!-- <script>
         console.log("Register service worker");
