prueba deploy github

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <!-- <img src="/img/01-s.png" alt=""> -->
+    <h1>Funciona el deploy?</h1>
    <div>
     <header class="banner">
         <img src="/img/icons/bx-menu.svg" alt="menu" id="menuicon">
